--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -49,7 +49,20 @@
 	</div>
 <% end %>
 
-<div class="actions">
+<%= content_tag :fieldset do %>
+	<%= content_tag :div, class: 'well' do %>
+		<%= content_tag :legend, 'Others' %>
+		<%= f.input :status, collection: Entry::STATUS_TAGS, include_blank: true %>
+		<%= f.input :online, include_blank: true %>
+		<%= f.input :bid_until, include_blank: true %>
+		<%= f.input :decided, include_blank: true %>
+		<%= f.input :expired, include_blank: true %>
+		<%= f.input :orders_count, include_blank: true %>
+	<% end %>
+<% end %>
+
+
+<div class="well">
   <%= f.button :submit, class: 'btn large primary'  %>
 	<%= link_to "Cancel", entries_path, class: 'btn', type: 'reset' %>
 </div>
