--- a/app/views/orders/_items_table.html.erb
+++ b/app/views/orders/_items_table.html.erb
@@ -1,5 +1,6 @@
-<%= content_tag :div, class: 'row' do %>
-	<%= content_tag :div, class: 'span16' do %>
+	
+<%= content_tag :div, class: 'span16', id: 'order-items' do %>
+	<%= content_tag :div, class: 'well' do %>
 
 	<%= content_tag :table do %>
 		<%= content_tag :thead do %>
