--- a/app/views/bids/_bid.html.erb
+++ b/app/views/bids/_bid.html.erb
@@ -1,2 +1,2 @@
 <%= bid_amount_helper bid %>
-<%#= content_tag :p, time_in_words(bid.bid_speed) %>
+<%= content_tag :p, time_in_words(bid.bid_speed) %>
