--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,10 +34,13 @@
 		        <%= yield %>
 					</div> <!-- end of span12 -->
 					<div class="span4">
-			     	<div class="well">
+			     	<div class="well sidebar">
 			        <h5>Sidebar</h5>
 							<%= yield(:sidebar) %>
 			      </div> <!-- end of .well -->
+						<%= content_tag :div, class: 'well sidebar' do %>
+							<%= yield(:messages) %>
+						<% end %>
 					</div> <!-- end of span4 -->
 				</div>
       </section>
